--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 					<!-- Banner -->
 						<section id="banner">
 							<header>
-								<h2>Howdy. This is Dopetrope.</h2>
-								<p>A responsive template by HTML5 UP</p>
+								<h2>Hello there. This is Dopetrope.</h2>
+								<p>A responsive template by Anurag Sindhwani</p>
 							</header>
 						</section>
 
