--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<script type="text/javascript">
+			(function() {
+			  this.bcHostname = 'nagarro3.sb.blueconic.net';
+			  var bcScript = document.createElement('script');
+			  bcScript.async = true;
+			  bcScript.src = 'https://' + this.bcHostname + '/script.js';
+			  (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(bcScript);
+			})();
+		  </script>
 	</head>
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
@@ -387,7 +396,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<script src="https://t283.nagarro-blueconic-sw.s3-website-us-east-1.amazonaws.com/script.js"></script>
+			
 
 	</body>
 </html>
