--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -10,6 +10,15 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<script type="text/javascript">
+			(function() {
+			  this.bcHostname = 'nagarro3.sb.blueconic.net';
+			  var bcScript = document.createElement('script');
+			  bcScript.async = true;
+			  bcScript.src = 'https://' + this.bcHostname + '/script.js';
+			  (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(bcScript);
+			})();
+		  </script>
 	</head>
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
