--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -55,6 +55,7 @@
 								<li><a href="left-sidebar.html">Left Sidebar</a></li>
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
 								<li class="current"><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="signup.html">Sign Up</a></li>
 							</ul>
 						</nav>
 
